@@ -39,7 +39,7 @@
  */
 
 #include "includes.h"
-RCSID("$OpenBSD: channels.c,v 1.153 2001/12/28 14:50:54 markus Exp $");
+RCSID("$OpenBSD: channels.c,v 1.154 2001/12/28 15:06:00 markus Exp $");
 
 #include "ssh.h"
 #include "ssh1.h"
@@ -1710,7 +1710,7 @@ channel_output_poll(void)
 /* -- protocol input */
 
 void
-channel_input_data(int type, int plen, u_int32_t seq, void *ctxt)
+channel_input_data(int type, u_int32_t seq, void *ctxt)
 {
 	int id;
 	char *data;
@@ -1754,7 +1754,7 @@ channel_input_data(int type, int plen, u_int32_t seq, void *ctxt)
 }
 
 void
-channel_input_extended_data(int type, int plen, u_int32_t seq, void *ctxt)
+channel_input_extended_data(int type, u_int32_t seq, void *ctxt)
 {
 	int id;
 	int tcode;
@@ -1794,7 +1794,7 @@ channel_input_extended_data(int type, int plen, u_int32_t seq, void *ctxt)
 }
 
 void
-channel_input_ieof(int type, int plen, u_int32_t seq, void *ctxt)
+channel_input_ieof(int type, u_int32_t seq, void *ctxt)
 {
 	int id;
 	Channel *c;
@@ -1815,7 +1815,7 @@ channel_input_ieof(int type, int plen, u_int32_t seq, void *ctxt)
 }
 
 void
-channel_input_close(int type, int plen, u_int32_t seq, void *ctxt)
+channel_input_close(int type, u_int32_t seq, void *ctxt)
 {
 	int id;
 	Channel *c;
@@ -1853,7 +1853,7 @@ channel_input_close(int type, int plen, u_int32_t seq, void *ctxt)
 
 /* proto version 1.5 overloads CLOSE_CONFIRMATION with OCLOSE */
 void
-channel_input_oclose(int type, int plen, u_int32_t seq, void *ctxt)
+channel_input_oclose(int type, u_int32_t seq, void *ctxt)
 {
 	int id = packet_get_int();
 	Channel *c = channel_lookup(id);
@@ -1865,7 +1865,7 @@ channel_input_oclose(int type, int plen, u_int32_t seq, void *ctxt)
 }
 
 void
-channel_input_close_confirmation(int type, int plen, u_int32_t seq, void *ctxt)
+channel_input_close_confirmation(int type, u_int32_t seq, void *ctxt)
 {
 	int id = packet_get_int();
 	Channel *c = channel_lookup(id);
@@ -1881,7 +1881,7 @@ channel_input_close_confirmation(int type, int plen, u_int32_t seq, void *ctxt)
 }
 
 void
-channel_input_open_confirmation(int type, int plen, u_int32_t seq, void *ctxt)
+channel_input_open_confirmation(int type, u_int32_t seq, void *ctxt)
 {
 	int id, remote_id;
 	Channel *c;
@@ -1928,7 +1928,7 @@ reason2txt(int reason)
 }
 
 void
-channel_input_open_failure(int type, int plen, u_int32_t seq, void *ctxt)
+channel_input_open_failure(int type, u_int32_t seq, void *ctxt)
 {
 	int id, reason;
 	char *msg = NULL, *lang = NULL;
@@ -1959,7 +1959,7 @@ channel_input_open_failure(int type, int plen, u_int32_t seq, void *ctxt)
 }
 
 void
-channel_input_channel_request(int type, int plen, u_int32_t seq, void *ctxt)
+channel_input_channel_request(int type, u_int32_t seq, void *ctxt)
 {
 	int id;
 	Channel *c;
@@ -1984,7 +1984,7 @@ channel_input_channel_request(int type, int plen, u_int32_t seq, void *ctxt)
 }
 
 void
-channel_input_window_adjust(int type, int plen, u_int32_t seq, void *ctxt)
+channel_input_window_adjust(int type, u_int32_t seq, void *ctxt)
 {
 	Channel *c;
 	int id, adjust;
@@ -2008,7 +2008,7 @@ channel_input_window_adjust(int type, int plen, u_int32_t seq, void *ctxt)
 }
 
 void
-channel_input_port_open(int type, int plen, u_int32_t seq, void *ctxt)
+channel_input_port_open(int type, u_int32_t seq, void *ctxt)
 {
 	Channel *c = NULL;
 	u_short host_port;
@@ -2615,7 +2615,7 @@ x11_connect_display(void)
  */
 
 void
-x11_input_open(int type, int plen, u_int32_t seq, void *ctxt)
+x11_input_open(int type, u_int32_t seq, void *ctxt)
 {
 	Channel *c = NULL;
 	int remote_id, sock = 0;
@@ -2662,7 +2662,7 @@ x11_input_open(int type, int plen, u_int32_t seq, void *ctxt)
 
 /* dummy protocol handler that denies SSH-1 requests (agent/x11) */
 void
-deny_input_open(int type, int plen, u_int32_t seq, void *ctxt)
+deny_input_open(int type, u_int32_t seq, void *ctxt)
 {
 	int rchan = packet_get_int();
 	switch (type) {
@@ -2673,7 +2673,7 @@ deny_input_open(int type, int plen, u_int32_t seq, void *ctxt)
 		error("Warning: ssh server tried X11 forwarding.");
 		break;
 	default:
-		error("deny_input_open: type %d plen %d", type, plen);
+		error("deny_input_open: type %d", type);
 		break;
 	}
 	error("Warning: this is probably a break in attempt by a malicious server.");
@@ -2873,7 +2873,7 @@ auth_input_request_forwarding(struct passwd * pw)
 /* This is called to process an SSH_SMSG_AGENT_OPEN message. */
 
 void
-auth_input_open_request(int type, int plen, u_int32_t seq, void *ctxt)
+auth_input_open_request(int type, u_int32_t seq, void *ctxt)
 {
 	Channel *c = NULL;
 	int remote_id, sock;
